chore: update docs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Welcome to MarbleCMS"
+og:image: "/images/og-light.jpg"
 ---
 
 <img
@@ -10,62 +11,21 @@ description: "Welcome to the home of your new documentation"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/images/og-light.jpg"
   alt="Hero Dark"
 />
 
-## Setting up
+## So what is Marble?
 
-The first step to world-class documentation is setting up your editing environments.
+Marble is a lightweight Headless CMS that keeps things simple, so you can focus on writing great content and building your site without the fuss. Whether you’re drafting your first post or developing a modular content solution, Marble helps you go from idea to execution in minutes with a clean editor, sensible defaults, and tools that just work.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+## What can it do?
 
-## Make it yours
+Marble offers a streamlined CMS that works beautifully for your blogging needs.
 
-Update your docs to your brand and add valuable content for the best user conversion.
+- Writers get a distraction-free, AI-powered editor and helpful SEO tips.  
+- Developers get a flexible, well-documented API that integrates easily with popular frameworks.  
+- Invite team members to collaborate.  
+- Use Marble’s image storage or pull from your own external storage.  
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+More features are on the way.
