--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,31 +1,55 @@
 ---
 title: Introduction
 description: "Welcome to MarbleCMS"
-og:image: "/images/og-light.jpg"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/og-light.jpg"
-  alt="Hero Dark"
-/>
+<Frame>
+  <picture>
+    <source
+      media="(prefers-color-scheme: dark)"
+      srcset="/images/hero-dark.png"
+    />
+    <img
+      src="/images/hero-light.png"
+      alt="A screenshot of the MarbleCMS editor"
+    />
+  </picture>
+</Frame>
 
-## So what is Marble?
+**Marble is a simple, headless CMS built for writers and developers.** It helps you manage and publish content without the complexity of traditional CMS platforms.
 
-Marble is a lightweight Headless CMS that keeps things simple, so you can focus on writing great content and building your site without the fuss. Whether you’re drafting your first post or developing a modular content solution, Marble helps you go from idea to execution in minutes with a clean editor, sensible defaults, and tools that just work.
+## Why use Marble?
 
-## What can it do?
+<CardGroup cols={2}>
+  <Card title="Clean Editor" icon="pencil-line">
+    A distraction-free writing experience with Markdown and AI assistance.
+  </Card>
+  <Card title="Headless API" icon="code">
+    Pull your content into any frontend (Next.js, Astro, etc.) with a flexible
+    REST API.
+  </Card>
+  <Card title="Team Collaboration" icon="users">
+    Invite others to write, edit, and review posts in a shared workspace.
+  </Card>
+  <Card title="Image Support" icon="image">
+    Upload images directly to Marble or link from your own storage solution.
+  </Card>
+</CardGroup>
 
-Marble offers a streamlined CMS that works beautifully for your blogging needs.
+## Who is it for?
 
-- Writers get a distraction-free, AI-powered editor and helpful SEO tips.  
-- Developers get a flexible, well-documented API that integrates easily with popular frameworks.  
-- Invite team members to collaborate.  
-- Use Marble’s image storage or pull from your own external storage.  
+- **Developers** who want to build custom sites without a bloated, monolithic CMS.
+- **Writers** who just want a clean and simple interface to write and publish.
+- **Small teams** that need a fast, collaborative way to manage content.
 
-More features are on the way.
+<Info>
+  **It's early days.** We're shipping fast and improving based on feedback from
+  users like you.
+</Info>
+
+## Ready to get started?
+
+<Card title="Quickstart Guide" href="/quickstart" icon="rocket">
+  Follow our quickstart guide to set up your account and create your first post
+  in minutes.
+</Card>
