--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,34 +1,96 @@
 ---
-title: 'Quickstart'
-description: 'Setting up your marble account and workspace'
+title: "Quickstart"
+description: "This guide will walk you through setting up your Marble account and creating your first workspace."
 ---
 
-## Create an account
+<Steps>
+<Step title="Create an account">
+To get started, head over to [marblecms.com](https://marblecms.com) and click the **Sign Up** button. You can sign up with your email, Google, or a GitHub account.
 
-To get stated writing your blog, you need to create a marblecms account. head over to [the website](https://marblecms.com) and hit the signup button to begin.
+<Frame>
+  <picture>
+    <source
+      media="(prefers-color-scheme: dark)"
+      srcset="/images/signup-dark.jpeg"
+    />
+    <img
+      src="/images/signup-light.jpeg"
+      alt="MarbleCMS sign-up page"
+    />
+  </picture>
+</Frame>
+</Step>
 
-## Create a workspace
+<Step title="Create a workspace">
+After signing up, you'll be prompted to create your first workspace.
 
-After you have created an account you will be redirected to a page where you can create a workspace.
+<Note>
+  **What is a workspace?** Think of a workspace as a container for all the
+  content related to a single project, like your personal blog or a company
+  website. Each workspace holds its own posts, media, tags, categories, and team
+  members.
+</Note>
 
-![Create a workspace](/images/create-workspace.png)
+Give your workspace a name (you can always change it later) and click **Create Workspace**.
 
-## What is a workspace?
+<Frame>
+  <picture>
+    <source
+      media="(prefers-color-scheme: dark)"
+      srcset="/images/onboarding-dark.jpeg"
+    />
+    <img
+      src="/images/onboarding-light.jpeg"
+      alt="Create a new workspace modal"
+    />
+  </picture>
+</Frame>
+</Step>
 
-You can think of a workspace as a website. each new workspace would hold content for a new website.
+<Step title="Explore the dashboard">
+Once your workspace is ready, you’ll be taken to the dashboard. This is your central hub for managing content. From here, you can create posts, upload media, and invite teammates.
 
-## Fill in the details
+<Frame>
+  <picture>
+    <source
+      media="(prefers-color-scheme: dark)"
+      srcset="/images/dashboard-dark.jpeg"
+    />
+    <img
+      src="/images/dashboard-light.jpeg"
+      alt="The MarbleCMS dashboard"
+    />
+  </picture>
+</Frame>
+</Step>
 
-You can name your workspace whatever you want. Once you have named your workspace, hit the create workspace button.
+<Step title="Create your first post">
+Click **New Post** to open the editor. The editor provides a clean, minimal interface where you can write in Markdown, add images from your media library, and organize your content with tags and categories.
 
-![Fill in the details](/images/fill-in-details.png)
+When you're ready, you can save your post as a draft or publish it immediately.
 
-## The dashboard
+<Frame>
+  <picture>
+    <source
+      media="(prefers-color-scheme: dark)"
+      srcset="/images/editor-dark.jpeg"
+    />
+    <img
+      src="/images/editor-light.jpeg"
+      alt="The MarbleCMS post editor"
+    />
+  </picture>
+</Frame>
+</Step>
 
-Once you have created a workspace, you will be redirected to the dashboard.
+<Step title="Next Steps">
+That's it! You've successfully set up your MarbleCMS workspace and created your first post. 🚀
 
-![The dashboard](/images/dashboard.png)
+Now you're ready to connect your content to your frontend. Check out our integration guides to get started.
 
-## Create a new blog
-
-Once you have created a workspace, you can create your first blog.
+<CardGroup>
+  <Card title="Next.js Integration" href="/integrations/nextjs" icon="react"></Card>
+  <Card title="Astro Integration" href="/integrations/astro" icon="stars"></Card>
+</CardGroup>
+</Step>
+</Steps>
