--- a/integrations/astro.mdx
+++ b/integrations/astro.mdx
@@ -12,7 +12,7 @@ Astro's **Content Collections** are the best way to manage content in your proje
 First, add your MarbleCMS API URL and Workspace Key to your environment variables. Create a `.env` file in the root of your Astro project and add the following:
 
 ```bash .env
-MARBLE_API_URL="https://api.marblecms.com"
+MARBLE_API_URL="https://api.marblecms.com/v1"
 MARBLE_WORKSPACE_KEY="your_workspace_key_here"
 ```
 
