--- a/integrations/nextjs.mdx
+++ b/integrations/nextjs.mdx
@@ -12,7 +12,7 @@ If you want to get started quickly, you can clone our [Next.js blog template](ht
 First, you'll need to add your MarbleCMS API URL and Workspace Key to your environment variables. Create a `.env.local` file in the root of your Next.js project and add the following:
 
 ```bash .env.local
-MARBLE_API_URL=https://api.marblecms.com
+MARBLE_API_URL=https://api.marblecms.com/v1
 MARBLE_WORKSPACE_KEY=your_workspace_key_here
 ```
 
