Fixed broken links on quick start page

--- a/content/guides/quickstart.mdx
+++ b/content/guides/quickstart.mdx
@@ -89,8 +89,8 @@ That's it! You've successfully set up your MarbleCMS workspace and created your 
 Now you're ready to connect your content to your frontend. Check out our integration guides to get started.
 
 <CardGroup>
-  <Card title="Next.js Integration" href="/integrations/nextjs" icon="react"></Card>
-  <Card title="Astro Integration" href="/integrations/astro" icon="stars"></Card>
+  <Card title="Next.js Integration" href="/content/guides/integrations/nextjs" icon="react"></Card>
+  <Card title="Astro Integration" href="/content/guides/integrations/astro" icon="stars"></Card>
 </CardGroup>
 </Step>
 </Steps>
