fix: broken links + api documentation

--- a/content/guides/integrations/astro.mdx
+++ b/content/guides/integrations/astro.mdx
@@ -20,7 +20,7 @@ MARBLE_WORKSPACE_KEY="your_workspace_key_here"
   **Important:** Never expose your `MARBLE_WORKSPACE_KEY` in client-side code.
   Your environment variables are loaded into the server context during the build
   process and should not be shared with the client. For client-side updates, use
-  [webhooks](/guides/webhooks) to trigger rebuilds.
+  [webhooks](/content/guides/webhooks) to trigger rebuilds.
 </Warning>
 
 <Tip>
