--- a/content/guides/integrations/nextjs.mdx
+++ b/content/guides/integrations/nextjs.mdx
@@ -19,7 +19,7 @@ MARBLE_WORKSPACE_KEY=your_workspace_key_here
 <Warning>
   **Important:** Never expose your `MARBLE_WORKSPACE_KEY` in client-side code.
   Your environment variables should only be accessed on the server during the
-  build process. For client-side updates, use [webhooks](/guides/webhooks) to
+  build process. For client-side updates, use [webhooks](/content/guides/webhooks) to
   trigger rebuilds.
 </Warning>
 
