--- a/content/guides/introduction.mdx
+++ b/content/guides/introduction.mdx
@@ -36,7 +36,7 @@ description: "Welcome to MarbleCMS"
 
 ## Ready to get started?
 
-<Card title="Quickstart Guide" href="/quickstart" icon="rocket">
+<Card title="Quickstart Guide" href="/content/guides/quickstart" icon="rocket">
   Follow our quickstart guide to set up your account and create your first post
   in minutes.
 </Card>
