--- a/content/api-reference/introduction.mdx
+++ b/content/api-reference/introduction.mdx
@@ -9,7 +9,7 @@ The MarbleCMS API is organized around REST. Our API has predictable resource-ori
 
 All API access is over HTTPS and is accessed from the `api.marblecms.com` domain. All data is sent and received as JSON.
 
-The structure of a request is: `https://api.marblecms.com/v1/:workspaceId/:resource`
+The structure of a request is: `https://api.marblecms.com/v1/:workspaceKey/:resource`
 
 ## Trying it out
 
@@ -24,7 +24,7 @@ $ curl https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts
 <Note>
   The example workspace (`cm6ytuq9x0000i803v0isidst`) does not require
   authentication. When you are ready to use your own workspace, you will need to
-  use API key authentication.
+  use your workspace key in the URL path.
 </Note>
 
 All timestamps are in UTC ISO 8601 format: `YYYY-MM-DDTHH:MM:SSZ`.
@@ -34,13 +34,12 @@ All timestamps are in UTC ISO 8601 format: `YYYY-MM-DDTHH:MM:SSZ`.
 > To authorize, use this code:
 
 ```bash
-# With shell, you can just pass the correct header with each request
-curl "https://api.marblecms.com/v1/YOUR_WORKSPACE_ID/posts" \
-  -H "Authorization: Bearer YOUR_API_KEY"
+# Simply include your workspace key in the URL path
+curl "https://api.marblecms.com/v1/YOUR_WORKSPACE_KEY/posts"
 ```
 
-> Make sure to replace `YOUR_WORKSPACE_ID` and `YOUR_API_KEY` with your credentials.
+> Make sure to replace `YOUR_WORKSPACE_KEY` with your actual workspace key.
 
-When you're ready to use your own workspace, MarbleCMS authenticates your API requests using your account’s API keys. If you do not include your key when making an API request, or use one that is incorrect or outdated, MarbleCMS returns an error.
+When you're ready to use your own workspace, MarbleCMS authenticates your API requests using your workspace key in the URL path. If you do not include your workspace key in the URL, or use one that is incorrect or outdated, MarbleCMS returns an error.
 
-Your API keys carry many privileges, so be sure to keep them secure! Do not share your secret API keys in publicly accessible areas such as GitHub, client-side code, and so forth.
+Your workspace key carries many privileges, so be sure to keep it secure! Do not share your workspace key in publicly accessible areas such as GitHub, client-side code, and so forth.
