--- a/content/guides/introduction.mdx
+++ b/content/guides/introduction.mdx
@@ -8,7 +8,7 @@ description: "Welcome to MarbleCMS"
 ## Why use Marble?
 
 <CardGroup cols={2}>
-  <Card title="Clean Editor" icon="pencil-line">
+  <Card title="Clean Editor" icon="pen">
     A distraction-free writing experience with Markdown and AI assistance.
   </Card>
   <Card title="Headless API" icon="code">
