feat: added tanstack integration guide

--- a/content/guides/quickstart.mdx
+++ b/content/guides/quickstart.mdx
@@ -91,6 +91,7 @@ Now you're ready to connect your content to your frontend. Check out our integra
 <CardGroup>
   <Card title="Next.js Integration" href="/content/guides/integrations/nextjs" icon="react"></Card>
   <Card title="Astro Integration" href="/content/guides/integrations/astro" icon="stars"></Card>
+  <Card title="TanStack Start Integration" href="/content/guides/integrations/tanstack" icon="tree-palm"></Card>
 </CardGroup>
 </Step>
 </Steps>
